fix STR format